syntax = "proto3";

import "google/api/annotations.proto";

option go_package="github.com/learn-go/web/common/api/core";
package learngo.web.common.core;

message HealthCheckRequest {
}

message HealthCheckResponse {
}

service HealthService {
    // 健康检查
    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {
        option (google.api.http) = {
            get : "/v1/health"
        };
    }
}
